--- a/paper/overleaf/appendix.tex
+++ b/paper/overleaf/appendix.tex
@@ -41,12 +41,12 @@
 \texttt{Question: who has the right of way in international waters?} \\
 \texttt{Answer: Neither vessel} \\
 \texttt{Question: who does annie work for attack on titan?} \\
-\texttt{Answer: Marley}
+\texttt{Answer: Marley} \\
 \texttt{Question: when was the immigration reform and control act passed?} \\
 \texttt{Answer: November 6, 1986} \\
 \texttt{[ENDSYS]} \\
 \texttt{<</SYS>>} \\
-\texttt{Question: {prompt}} \\
+\texttt{Question: <prompt>} \\
 \texttt{[/INST]} \\
 
 \noindent \textbf{Llama-2-13B-chat+RAG}: \\
